--- a/stylecj.css
+++ b/stylecj.css
@@ -74,7 +74,7 @@ nav ul li a:hover{
     text-align: center;
     width:60%;
     color: white;
-    text-shadow:  19px 19px 10px #000000;
+    text-shadow:  50px 20px 6px #000000;
     font-family:'Risque', cursive;
     font-size: 200px;
 }
@@ -110,16 +110,18 @@ nav ul li a:hover{
 .divy_g{
     position: relative;
     top: 560px;
-    height: 1090px;
+    height: 1000px;
     background-color:black;
 }
 .divy_z {
     background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(http://www.poolvillepost.com/Fitness_Clip_Art_-_Copy.jpg);
     min-height:120vh;
-    background-size:50% 450px;
-    
+   padding-top: 900px;
+    background-size:50% 850px;
+    background-attachment: fixed;
     background-repeat: no-repeat;
     display:flex;
+
 }
 .divy_1{
     position:absolute;
@@ -134,14 +136,18 @@ nav ul li a:hover{
 }
 
 .posts_pics1 img{
-    width: 300px;
+    width: 420px;
     height: 300px;
     float: left;
-    padding: 10px;
+    padding: 15px;
     @include dark-overlay;
 
 }
 .posts_z{
+    
+    background-size:100%;
+    background-attachment: fixed;
+    display:flex;
     width:100%;
     height: 380px;
     padding: 172px 72px 72px 72px;
@@ -150,16 +156,15 @@ nav ul li a:hover{
     background-color:white;
     width: 100%;
     height: 600px;
-    background-image: url(pics/7.jpg)
+    background-image: url(https://www.mensjournal.com/wp-content/uploads/mj-618_348_lee-boyce-tips-for-more-effective-workouts.jpg)
 }
 .posts_z h2{
     font-size: 79px;
-    color: dimgrey;
     font-family:'Aladin', cursive; 
     text-align: center;
-    text-shadow:  10px 0px 70px ;
+    text-shadow:  10px 10px 10px white;
     position: absolute;
-    left: 35%;
+    left: 10%;
     top:40px;
 }
 .posts_z h1:hover{
@@ -178,23 +183,21 @@ nav ul li a:hover{
 }
 .headings_posts1{
     position: absolute;
-    top: 42%;
-    width: 160px;
+    top: 60%;
+    width: 260px;
     left: 150px;
 }
 .headings_posts2{
     position: absolute;
-    top: 39%;
-    height: 190px;
-    width:180px;
-    left: 440px;
+    top: 55%;
+    width:280px;
+    left: 570px;
 }
 .headings_posts3{
     position: absolute;
-    top: 42%;
-    height: 160px;
-    width: 140px;
-    left: 760px;
+    top: 60%;
+    width: 240px;
+    left: 1000px;
 }
 .headings_posts4{
     position: absolute;
@@ -210,193 +213,33 @@ nav ul li a:hover{
     background-color:black;
 }
 .divy_z1 {
-    background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(pics/11.jpg);
+    height: 1000px;
+    background: linear-gradient(rgba(0,0,0,0.0),rgba(0,0,0,0.0)),url(Cj/17157769_821808404624667_6200170980425300372_o.jpg);
     min-height:120vh;
-    background-size: 100% 695px;
+    background-size: 100% 800px;
     background-attachment: fixed;
     background-repeat: no-repeat;
     display:flex;
 }
 .divy_11{
     position:absolute;
-    width: 300px;
+    width: 400px;
     height: 400px;
-    left: 65%;
-    top: 10%;
-    color: white;
+    left: 68%;
+    top: 15%;
+     text-shadow:  6px 6px 6px white ;
     font-family:'Satisfy', cursive;
     font-size: 40px;
     text-align: center;
 }
-.timeline {
-    position: relative;
-    max-width: 1200px;
-    margin: 0 auto;
-}
-.timeline::before {
-    content:'';
-    position: absolute;
-    width: 8px;
-    background-color: palevioletred;
-    top: 0;
-    bottom: 0;
-    left: 193px;
-    margin-left: -10px;
-}
-.container {
-    padding: 10px 150px;
-    position: relative;
-    background-color: inherit;
-    width: 90%;
-}
-.container::after{
-    content: '';
-    position: absolute;
-    width: 25px;
-    height: 25px;
-    left: 90px;
-    background-color: white;
-    border: 4px solid #ffccee;
-    top: 15px;
-    border-radius: 50%;
-    z-index: 1;
-}
-.left {
-    left: 80px;
-}
-    
-.left::before {
-    content: " ";
-    height: 0;
-    position: absolute;
-    top: 22px;
-    width: 0;
-    z-index: 1;
-    left: 140px;
-    border: medium solid white;
-    border-width: 10px 10px 10px 0;
-    border-color: transparent white transparent transparent;
-}
-.content {
-    padding: 20px 30px;
-    background-color: white;
-    position: relative;
-    border-radius: 6px;
-    border:2px solid pink;
-    font-family: 'Risque',cursive;
-    font-size: 24px;
-}
-.header_tips{
-    padding: 100px 140px;
-    background-color:darksalmon;
-    color: white;
-    border-bottom-style:ridge;
-}
-.heading_tips{
-    text-align: center;
-    font-family: 'Risque',cursive;
-    font-size: 80px;
-    text-decoration:underline;
-    text-decoration-color:blanchedalmond;
-    text-decoration-style:dotted;
-}
-.para_tips{
-    text-align:left;
-    font-size: 20px;
-}
-
-.header_gallery {
-    align-items: center;
-    background: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.5)),url(pics/168.JPG);
-    min-height:80vh;
-    background-size: cover;
-    background-attachment:local;
-}
-.heading_gallery{
-    position:absolute;
-    top: 45%;
-    left: 40%;
-    font-size: 80px;
-    font-family: 'Risque',cursive;
-    color: aliceblue;
-    text-shadow:  30px 30px 26px #000000;
-}
-.row { 
-    display: flex;
-    flex-wrap: wrap;
-    padding: 0 4px;
-}
-
-.column {
-    flex: 25%;
-    max-width: 25%;
-    padding: 0 4px;
-}
-
-.column img {
-    margin-top: 8px;
-    vertical-align: middle;
-}
-
-@media (max-width: 800px) {
-    .column {
-        flex: 50%;
-        max-width: 50%;
-    }
-}
-
-
-@media (max-width: 600px) {
-    .column {
-        flex: 100%;
-        max-width: 100%;
-    }
-}   
-div.gallery:hover {
-    border: 1px solid #777;
-}
-.buttons_food{
-    font-family: cursive;
-    width: 100%;
-    height: 100px;
-    font-size: 28px;
-    border: 2px;
-    border-color: black;
-    border-style: groove;
-}
-#uniquename h2{
-   font-family: 'Risque',cursive;
-    font-size: 20px;
-    text-align: center;
-}    
-#uniquename img{
-    float: left;
-    width: 50px;
-    height: auto;
-    border-radius: 40px;
-    padding: 10px;
-}
-#uniquename .foody{
-    background-color: aliceblue;
-    font-family: cursive;
-    width:150px;
-    height: 150px;
-    font-size: 11px;
-    border: 2px;
-    border-color: black;
-    border-style: groove;
-    border-radius: 30px;
-    float: left;
-}
-
 .food_gallery_z h2{
-    font-size: 80px;
-    font-family: 'Risque',cursive;
-    color:darkgray;
-    text-shadow:  0px 0px 16px #000000;
+    font-size: 79px;
+    font-family:'Aladin', cursive; 
+    text-align: center;
+    text-shadow:  10px 10px 10px white;
     position: absolute;
-    left: 40%;
-    top:20px;
+    left: 30%;
+    top:40px;
 }
 .food_gallery_z{
     position:relative;
