--- a/stylezs.css
+++ b/stylezs.css
@@ -74,8 +74,26 @@ nav ul li a:hover{
     background-size: 1450px 900px;
     display:flex;
     align-items: center;
+    
+    
    
 }
+
+.ban2{
+    background: linear-gradient(rgba(0,0,0,0.0),rgba(0,0,0,0)),url(https://olderdriversforum.files.wordpress.com/2013/09/notifiable-conditions.png?w=584&h=292);
+    min-height:90vh;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: 1450px 900px;
+    display:flex;
+    align-items: center;
+    
+    
+   
+}
+
+
+
 .name_1{
     position: absolute;
     top:35%;
@@ -151,7 +169,7 @@ nav ul li a:hover{
     background-color:black;
 }
 .divy_z {
-    background: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0)),url(zs/Meditation-can-improve-mental-health-1024x683.jpg);
+    background: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0)),url(https://upriteergo.com/wp-content/uploads/2016/01/workaholic.jpg);
     min-height:120vh;
    padding-top: 900px;
     background-size:50% 850px;
@@ -173,8 +191,7 @@ nav ul li a:hover{
 }
 
 .posts_pics1{
-    left: 400px;
-    padding: 40px;
+    background-size: 100%;
 
 }
 .posts_z{
@@ -183,15 +200,32 @@ nav ul li a:hover{
     background-attachment: fixed;
     display:flex;
     width:100%;
-    height: 380px;
+    height: 700px;
     padding: 10px 72px 72px 72px;
     position: absolute;
     top: 1900px;
     background-color:white;
-    width: 100%;
-    height: 600px;
-    background-image: url(https://i.ytimg.com/vi/UJUuqE1uVBk/maxresdefault.jpg)
+    background-image: url(http://hellodollface.com/wp-content/uploads/2013/10/meditatio1.jpg);
+    max-width:100%;
+    max-height:100%;
 }
+
+.posts_y{
+    
+    background-size:100%;
+    background-attachment: fixed;
+    display:flex;
+    width:100%;
+    height: 700px;
+    padding: 10px 72px 72px 72px;
+    position: absolute;
+    top: 1900px;
+    background-image: url(https://i.pinimg.com/originals/28/a7/c6/28a7c6a2fa16d448fac90fedbe21fdc8.jpg);
+    max-width:100%;
+    max-height:100%;
+}
+
+
 .posts_z h2{
     font-size: 79px;
     font-family:'Aladin', cursive; 
@@ -240,6 +274,14 @@ nav ul li a:hover{
     width: 150px;
     left: 1050px;
 }
+
+.headings_posts5{
+    position: absolute;
+    top: 40%;
+    width: 250px;
+    left: 150px;
+}
+
 .divy_g1{
     position: relative;
     top: 640px;
