--- a/stylezs.css
+++ b/stylezs.css
@@ -28,12 +28,12 @@
 }
 
 .yt_playlist{
-    width: 700px; /* you have to have a size or this method doesn't work */
-    height: 500px; /* think about making these max-width instead - might give you some more responsiveness */
-    position: absolute; /* positions out of the flow, but according to the nearest parent */
-    top: 0; right: 0; /* confuse it i guess */
+    width: 700px; 
+    height: 500px; 
+    position: absolute; 
+    top: 0; right: 0; 
     bottom: 0; left: 0;
-    margin: auto; /* make em equal */
+    margin: auto; 
 }
 nav{
     position:sticky;
