--- a/stylezs.css
+++ b/stylezs.css
@@ -220,7 +220,7 @@ nav ul li a:hover{
     padding: 10px 72px 72px 72px;
     position: absolute;
     top: 1900px;
-    background-image: url(https://i.pinimg.com/originals/28/a7/c6/28a7c6a2fa16d448fac90fedbe21fdc8.jpg);
+    background-image: url(zs/402977761-health-wallpapers.jpg);
     max-width:100%;
     max-height:100%;
 }
