--- a/stylemed.css
+++ b/stylemed.css
@@ -28,12 +28,12 @@
 }
 
 .yt_playlist{
-    width: 700px; /* you have to have a size or this method doesn't work */
-    height: 500px; /* think about making these max-width instead - might give you some more responsiveness */
-    position: absolute; /* positions out of the flow, but according to the nearest parent */
-    top: 0; right: 0; /* confuse it i guess */
+    width: 700px; 
+    height: 500px; 
+    position: absolute; 
+    top: 0; right: 0; 
     bottom: 0; left: 0;
-    margin: auto; /* make em equal */
+    margin: auto; 
 }
 nav{
     position:sticky;
@@ -119,21 +119,51 @@ nav ul li a:hover{
     }
 .intro_8 h4{
     width: 100%;
-    height: 2900px;
+    height: 1910px;
     font-family: 'Bellefair', serif;
-    font-size: 20px;
-    width:700px;
+    font-size: 40px;
+    width:1423px;
     text-align: center;
     position:absolute;
-    left:612px;
     top: 650px;
-    background-color: antiquewhite;
+    
     
 }
+.med1{
+   background-image: url(ZS/pexels-photo.jpg) 
+}
 
+.med2{
+    background-image: url(ZS/nature_call-wide.jpg)
+
+}
+.med2 p{
+    color: white;
+}
+
+
+.med3{
+    background-image: url(ZS/0WjHah.jpg)
+}
+.med3 p{
+    color: white;
+}
+.med4{
+    background-image: url(ZS/nature-images..jpg)
+}
+
+.med4 p{
+    color: white;
+}
 .intro_fitness{
     width: 100%;
     height: 100px;
+}
+.med5{
+    background-image: url(ZS/pexels-photo-204792.jpeg)
+}
+.med5 p{
+    color: white;
 }
 
 .intro_img{
@@ -332,5 +362,8 @@ nav ul li a:hover{
     padding-left: 40px;
 }
 body{
-    background-color: lightyellow;
+    background-image: url(ZS/1200px-Clouds_over_the_Atlantic_Ocean.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    
 }
