--- a/stylezs.css
+++ b/stylezs.css
@@ -42,7 +42,7 @@ nav{
 nav ul{
     background-color: black;
     list-style-type:none;
-    
+    text-shadow:  0px 0px 6px white;
 }
 nav ul li a {
     text-decoration: none;
