--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,7 @@ nav ul li a:hover{
 
 .ban1{
     background: linear-gradient(rgba(0,0,0,0.0),rgba(0,0,0,0.0)),url(pics/banner.png);
- border-radius: 30px;
+    border-radius: 30px;
     min-height:90vh;
     background-attachment: fixed;
     background-repeat: no-repeat;
@@ -270,10 +270,10 @@ nav ul li a:hover{
 }
 .div_quote22{
     position:absolute;
-    width: 1200px;
+    width: 600px;
     height: 100px;
-    left: 10%;
-    top: 10%;
+    left: 50%;
+    top: 6%;
     color: white;
     font-family:'Satisfy', cursive;
     font-size: 40px;
@@ -415,6 +415,22 @@ div.gallery:hover {
     border-color: black;
     border-style: groove;
 }
+.div_quote22 button{
+    text-decoration: none;
+    height: 80px;
+    width: 150px;
+    border: 1px solid black;
+    background-color: azure;
+    padding: 20px;
+    
+}
+.div_quote22 button a{
+    text-decoration: none;
+    color:dimgrey;
+    font-size: 28px;
+    font-family: fantasy;
+}
+
 .food_gallery_z h2{
     font-size: 80px;
     font-family: 'Risque',cursive;
@@ -501,4 +517,98 @@ div.gallery:hover {
     width: 140px;
     left: 760px;
     font-size: 18px !important;
+}
+.foodDiv{
+    padding: 50px 250px 0px 230px;
+     background-color: #f1f7ed;
+}
+.foodDiv img{
+    width: 300px;
+    height: 300px;
+    float: right;
+    border-radius: 20px;
+}
+.foodDiv img:hover{
+    width: 302px;
+    height: 302px;
+}
+.food_list{
+    padding: 30px 20px 110px 50px;
+     background-color: white;
+}
+.food_list h2{
+     font-family:'Aladin',cursive;
+     font-size: 38px;
+     
+}
+.food_list p span{
+    font-weight: bold;
+    font-size: 24px;
+    color: grey;
+}
+.food_list p{
+     padding: 4px 340px 0px 15px;
+     font-family:'Roboto',cursive;
+     font-size: 24px;
+}
+.steps_button1 a{
+     font-size: 28px;
+    text-decoration: none;
+     color: white;
+}
+.steps_button1{
+    background-color: black;
+    width: 100px;
+    height: 60px;
+    font-family:'Roboto',cursive;
+    cursor: pointer;
+}
+.steps_arrow{
+    width: 60px;
+    height: 60px;
+    position: absolute;
+    left: 700px;
+    border: 1px solid 80px;
+    background: url(pics/arrow1.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.headersDiv{
+    padding: 100px;
+    font-size: 28px;
+    font-family:'Roboto',cursive;
+}
+.headersDiv h2{
+     font-family:'Aladin',cursive;
+}
+.headersDiv img{
+    width: 500px;
+    border-radius:30px;
+}
+.headersDiv p{
+    padding-left: 60px;
+    padding-right: 60px;
+    float:right;
+    width: 620px;
+    font-family:'Roboto',cursive;
+}
+.headersDiv span{
+    font-size: 40px;
+    font-weight: bold;
+    font-family:'Aladin',cursive;
+    text-indent:inherit;
+    text-align: center;
+}
+#steps_1{
+    display: none;
+    padding: 5px 50px 0px 90px;
+}
+#steps_2{
+    display: none;
+    padding: 5px 50px 0px 90px;
+}
+#steps_3{
+    display: none;
+    padding: 5px 50px 0px 90px;
 }
