--- a/styles.css
+++ b/styles.css
@@ -108,11 +108,12 @@ nav ul li a:hover{
     text-align: left;
     position:absolute;
     left:10px;
-    padding: 40px 40px 40px 40px;
+    padding: 140px 40px 40px 40px;
 }
 .intro_food{
    width: 100%;
     height: 100px;
+    line-height: 40px;
 }
 .intro_img{
    position:absolute;
@@ -124,14 +125,12 @@ nav ul li a:hover{
 .intro_food button{
     text-decoration: none;
     position: relative;
-    left: 15%;
-    top: 420px;
-    height: 60px;
+    left: 70%;
+    top: 400px;
+    height: 50px;
     width: 250px;
     border: 1px solid black;
     background-color: azure;
-    padding: 20px;
-    
 }
 .intro_food button a{
     text-decoration: none;
@@ -141,7 +140,7 @@ nav ul li a:hover{
 }
 .div_quote1{
     position: relative;
-    top: 550px;
+    top: 580px;
     height: 670px;
     background-color:black;
     border-radius: 30px;
@@ -162,7 +161,7 @@ nav ul li a:hover{
     width: 500px;
     height: 400px;
     left: 60%;
-    top: 5%;
+    top: 15%;
     color: white;
     font-family:'Freckle Face', cursive;
     font-size: 30px;
@@ -229,12 +228,12 @@ nav ul li a:hover{
     top: 35%;
     width: 350px;
     left: 200px;
-    height: 60px;
+    height: 100px;
 }
 .headings_posts2{
     position: absolute;
-    top: 32%;
-    height: 110px;
+    top: 37%;
+    height: 60px;
     width:400px;
     left: 740px;
 }
