--- a/stylemed.css
+++ b/stylemed.css
@@ -367,3 +367,27 @@ body{
     background-size: cover;
     
 }
+
+#footer { 
+  
+  width: 100%;
+  height: 90px;
+  background: #000;
+  top: 6446px; 
+  z-index: 100;
+  position: absolute;
+
+}
+
+#footer p{ 
+  color: white;
+    font-size: 30px;
+  font-family: cursive;
+  
+
+}
+
+#footer a{ 
+  color: white;
+    
+}
