--- a/stylemedical.css
+++ b/stylemedical.css
@@ -383,3 +383,27 @@ nav ul li a:hover{
     font-size: 28px;
     padding-left: 40px;
 }
+
+#footer { 
+  
+  width: 100%;
+  height: 90px;
+  background: #000;
+  top: 2600px; 
+  z-index: 100;
+  position: absolute;
+
+}
+
+#footer p{ 
+  color: white;
+    font-size: 30px;
+  font-family: cursive;
+  
+
+}
+
+#footer a{ 
+  color: white;
+
+}
